@@ -36,6 +36,8 @@ with new Example ULTM.  Theorem NTM new in Section MO,
 describes nonsingular triangular matrices, with Example NSTM
 to illustrate.  Move Theorem PTMT about the product of
 triangular matrices moves from Section OD to Section MM.
+Move Theorem ITMT about inverses of triangular matrices
+from Section OD to Section MINM.
 
 v X.XX
 ~~~~~~~~~~~~~~~~
@@ -86,6 +88,7 @@ Change: Theorem EMRCP, shorter proof with new Theorem ESM
 Change: Locate Theorem MNEM earlier, with new proof
 Change: Locate Definition UTM and Definition LTM earlier
 Change: Locate Theorem PTMT in Section MM
+Change: Locate Theorem ITMT in Section MINM
 Sage: doctesting, version 9.2
 Typo: Exercise SSLE.C53, add second condition to quoted problem (Jaime Ruiz)
 Typo: Theorem PSPHS, stray addition sign in the proof (Rachel Chaiser)
